[IMPORTANT] 이미지 중복 방지 로직 강화 및 뷰어 확대/다운로드 기능 구현

--- a/css.html
+++ b/css.html
@@ -2875,7 +2875,21 @@
     cursor: pointer;
     transition: all .15s;
     color: #4f46e5;
-    flex-shrink: 0;
+  }
+
+  /* Lightbox Zoom */
+  .cursor-zoom-in {
+    cursor: zoom-in;
+  }
+
+  .cursor-zoom-out {
+    cursor: zoom-out;
+  }
+
+  #lightboxImg.zoomed {
+    transform: scale(2);
+    max-width: none;
+    max-height: none;
   }
 
   .img-btn:active {
