--- a/index.html
+++ b/index.html
@@ -27,6 +27,36 @@
         role="alert"></div>
     <div id="mobileMenuOverlay" class="mobile-menu-overlay" onclick="toggleMobileMenu()"></div>
 
+    <!-- 이미지 확대 라이트박스 모달 -->
+    <div id="imageLightbox"
+        class="fixed inset-0 z-[10000] bg-black bg-opacity-90 flex flex-col items-center justify-center content-hidden"
+        onclick="closeLightbox()">
+        <div class="absolute top-4 right-4 flex gap-4">
+            <button id="lightboxDownloadBtn" onclick="event.stopPropagation()"
+                class="p-2 bg-white bg-opacity-20 hover:bg-opacity-30 rounded-full text-white transition" title="다운로드">
+                <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M4 16v1a2 2 0 002 2h12a2 2 0 002-2v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
+                </svg>
+            </button>
+            <button onclick="closeLightbox()"
+                class="p-2 bg-white bg-opacity-20 hover:bg-opacity-30 rounded-full text-white transition">
+                <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12">
+                    </path>
+                </svg>
+            </button>
+        </div>
+        <div class="w-full h-full p-4 flex items-center justify-center" onclick="event.stopPropagation()">
+            <img id="lightboxImg" src=""
+                class="max-w-full max-h-full object-contain transition-transform duration-200 cursor-zoom-in"
+                onclick="toggleLightboxZoom(event)">
+        </div>
+        <div id="lightboxCaption"
+            class="absolute bottom-8 left-1/2 transform -translate-x-1/2 text-white text-lg font-bold bg-black bg-opacity-50 px-4 py-2 rounded-lg">
+        </div>
+    </div>
+
     <header class="bg-white shadow-md relative z-30">
         <div id="header-container" class="max-w-full mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
