[IMPORTANT] 이미지 중복 방지 로직 강화 및 입찰 목록 테이블 레이아웃 최적화 완료

--- a/css.html
+++ b/css.html
@@ -978,8 +978,8 @@
   /* 입찰 목록 테이블 컬럼 폭·정렬 - 가로 스크롤 지원 */
   .item-list-table {
     table-layout: fixed;
-    width: 958px;
-    min-width: 958px;
+    width: 760px;
+    min-width: 760px;
   }
 
   /* check/date/img/sakun_no 는 sticky (사건번호까지 고정) */
@@ -1039,7 +1039,7 @@
 
   .item-list-table th.item-col-sakun,
   .item-list-table td.item-col-sakun {
-    width: 210px;
+    width: 205px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -1080,7 +1080,8 @@
   }
 
   .item-list-table .item-col-court {
-    width: 80px;
+    width: 85px;
+    white-space: nowrap;
   }
 
   .item-list-table th.item-col-court {
@@ -1101,11 +1102,22 @@
   }
 
   .item-list-table .item-col-member {
-    width: 130px;
+    width: 150px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .item-list-table .item-col-manager {
-    width: 70px;
+    width: 110px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .item-list-table td.item-col-manager {
+    padding-left: 16px;
+    padding-right: 4px;
   }
 
   /* 입찰가 컬럼 */
